<resources>
    <string name="app_name">Seedlings</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="request">Request</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="put">Put</string>
    <string name="post">Post</string>
    <string name="get">Get</string>
    <string name="addCard">Add Card</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_view">View</string>
    <string name="title_network">Network</string>
    <string name="type">Type</string>
    <string name="title">Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="day">Day</string>
</resources>